# VINS-Mono-GTSAM

config/euroc/: euroc_config.yaml
config/tum/: tum_config.yaml
pose_graph/: CMakeLists.txt
pose_graph/src/: keyframe.h  netvlad.cpp  netvlad.h  pose_graph.cpp  pose_graph.h  pose_graph_node.cpp
